@@ -893,6 +893,16 @@ class testToolPloneMeeting(PloneMeetingTestCase):
                 )),
                          error_msg)
 
+    def test_pm__users_groups_value(self):
+        """Test that this cached method behaves normally."""
+        # get pmManager groups
+        pmManagerGroups = [groups for groups, user in self.tool._users_groups_value() if user == 'pmManager'][0]
+        self.assertTrue(self.developers_creators in pmManagerGroups)
+        # remove pmManager from developers creators
+        self._removePrincipalFromGroup('pmManager', self.developers_creators)
+        pmManagerGroups = [groups for groups, user in self.tool._users_groups_value() if user == 'pmManager'][0]
+        self.assertFalse(self.developers_creators in pmManagerGroups)
+
     def test_pm_Get_plone_groups_for_user(self):
         """Test that this cached method behaves normally."""
         # works with different users
