@@ -31,6 +31,7 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
   contacts based attendees and assembly based extra fields (proxies, guests, ...) together
 - MeetingItem.itemAssembly is no longer an optional field and is thus no more selectable in MeetingConfig.usedItemAttributes,
   it is enabled if optional field Meeting.assembly is selected in MeetingConfig.usedMeetingAttributes
+- Added accurate caching for CompoundCriterionAdapters so it is evaluated only when users/groups associations changed
 
 4.1b11 (2018-09-11)
 -------------------
